--- a/war/index.html
+++ b/war/index.html
@@ -12,14 +12,6 @@
     
     <meta name="description" content="WebPaige v2.0.0">
     <meta name="viewport" content="width=device-width">
-
-    <!-- jquery -->
-    <script src="libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-    <script src="libs/rsvp/1.0.0/rsvp.min.js"></script>
-    <script src="dist/plugins.min.js"></script>
-
-    <!-- profile configs -->
-    <script src="profiles/test/profile.js"></script>
     
     <!-- favicons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-144-precomposed.png">
@@ -32,6 +24,14 @@
     <link rel="stylesheet" href="dist/bootstrap.css">
     <link rel="stylesheet" href="dist/responsive.css">
     <link rel="stylesheet" href="dist/app.css">
+
+    <!-- jquery -->
+    <script src="libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+    <script src="libs/rsvp/1.0.0/rsvp.min.js"></script>
+    <script src="dist/plugins.min.js"></script>
+
+    <!-- profile configs -->
+    <script src="profiles/test/profile.js"></script>
 
     <!--[if IE 8]>
       <link rel="stylesheet" href="css/ie8.css">
@@ -160,14 +160,34 @@
 
     <!-- loading -->
     <div id="loading" ng-show="loadingBig">
-      <span class="entypo" ng-show="loaderIcons.general">&#9203;</span>
-      <span class="entypo" ng-show="loaderIcons.dashboard">&#9716;</span>
-      <span class="entypo" ng-show="loaderIcons.planboard">&#128340;</span>
-      <span class="entypo" ng-show="loaderIcons.messages">&#59255;</span>
-      <span class="entypo" ng-show="loaderIcons.groups">&#128101;</span>
-      <span class="entypo" ng-show="loaderIcons.profile">&#128100;</span>
-      <span class="entypo" ng-show="loaderIcons.settings">&#9874;</span>
-      <!-- <p>{{ui.login.loading}}</p> -->
+      <div ng-show="loaderIcons.general">
+        <span class="entypo">&#9203;</span>
+        <p>Loading..</p>
+      </div>
+      <div ng-show="loaderIcons.dashboard">
+        <span class="entypo">&#9716;</span>
+        <p>Loading<br>dashboard</p>
+      </div>
+      <div ng-show="loaderIcons.planboard">
+        <span class="entypo">&#128340;</span>
+        <p>Loading<br>planboard</p>
+      </div>
+      <div ng-show="loaderIcons.messages">
+        <span class="entypo">&#59255;</span>
+        <p>Loading<br>messages</p>
+      </div>
+      <div ng-show="loaderIcons.groups">
+        <span class="entypo">&#128101;</span>
+        <p>Loading<br>groups</p>
+      </div>
+      <div ng-show="loaderIcons.profile">
+        <span class="entypo">&#128100;</span>
+        <p>Loading<br>profile</p>
+      </div>
+      <div ng-show="loaderIcons.settings">
+        <span class="entypo">&#9874;</span>
+        <p>Loading<br>settings</p>
+      </div>
     </div>
     <!-- end loading -->
 
