--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.1.0 (snapshot)</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.1.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -54,9 +54,10 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.1.0 (snapshot)</h4>
+                <h4>2.1.0</h4>
                 <p>
                   <ul>
+                    <li>IE9 & IE10 support, IE8 (temporarily) and less are blocked <i class="text-info">3-5-2013</i></li>
                     <li>Google Anlaytics implemented <i class="text-info">3-5-2013</i></li>
                     <li>Pagination in messages center <i class="text-info">2-5-2013</i></li>
                     <li>Instruct user with email adres placeholder when remembering account info at login <i class="text-info">29-4-2013</i></li>
