--- a/war/index.html
+++ b/war/index.html
@@ -260,8 +260,9 @@
     <script src="libs/angular/1.0.5/angular.min.js"></script>
     <script src="libs/angular/1.0.5/angular-resource.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
-    <!-- <script src="dist/app.min.js"></script> -->
-    <script src="src/app.js"></script>
+    
+    <script src="dist/app.min.js"></script>
+    <!-- <script src="src/app.js"></script> -->
     <!--<![endif]-->
 
     <script type="text/javascript">
