--- a/war/version.html
+++ b/war/version.html
@@ -54,6 +54,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.2.0</h4>
+                <p>
+                  <ul>
+                    <li>Deployed for live, test, gvrb and isparaat <i class="text-info">3-5-2013</i></li>
+                  </ul>
+                </p>
                 <h4>2.1.0</h4>
                 <p>
                   <ul>
