--- a/war/index.html
+++ b/war/index.html
@@ -73,7 +73,7 @@
     <!-- end watermark for app -->
 
     <!-- navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top" bs-navbar>
+    <div class="navbar navbar-inverse navbar-fixed-top ng-cloak" bs-navbar>
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -166,7 +166,7 @@
     <!-- end navbar -->
 
     <!-- loading -->
-    <div id="loading" ng-show="loadingBig">
+    <div id="loading" ng-show="loadingBig" class="ng-cloak">
       <div ng-show="loaderIcons.general">
         <span class="entypo">&#9203;</span>
         <p>{{ui.loading.general}}...</p>
@@ -199,7 +199,7 @@
     <!-- end loading -->
 
     <!-- notifications -->
-     <div id="notification" class="alert {{notification.type}}" ng-show="notification.status">
+     <div id="notification" class="alert {{notification.type}} ng-cloak" ng-show="notification.status">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       {{notification.message}}
     </div>
@@ -217,13 +217,13 @@
     <!-- end wrap -->
 
     <!-- mobile status bar -->
-    <div id="mobile-status-bar" ng-show="loading.status && browser.mobile">
+    <div id="mobile-status-bar" ng-show="loading.status && browser.mobile" class="ng-cloak">
       <img src="img/ajax-loader.gif"><small>{{loading.message}}</small>
     </div>
     <!-- end mobile status bar -->
 
     <!-- footer -->
-    <div id="footer" ng-hide="browser.mobile">
+    <div id="footer" ng-hide="browser.mobile" class="ng-cloak">
       <div class="container-fluid">
 
         <!-- copyrights -->
