--- a/war/version.html
+++ b/war/version.html
@@ -42,7 +42,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.1.0</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.2.0</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -57,6 +57,7 @@
                 <h4>2.2.0</h4>
                 <p>
                   <ul>
+                    <li>Hotfix for not going further than 6th page in pagination in messages <i class="text-info">4-5-2013</i></li>
                     <li>Deployed for live, test, gvrb and isparaat <i class="text-info">3-5-2013</i></li>
                   </ul>
                 </p>
